# B2B2C

./: .gitignore  README.md  build_all.sh  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/014c596c576fe5bb768734aa562261ea/: .filecache  outputs.json
.dart_tool/flutter_build/141ffb9ae67e2889df8090efd4edc25b/: .filecache  dart_build.d  (+9 more)
.github/workflows/: build.yml
android/app/: build.gradle.kts  flavorizr.gradle.kts  proguard-rules.pro
config/: app.yaml  app_config.json  flavors.json  security_config.example.json
docs/: SECURITY_ANALYSIS.md  SECURITY_CONFIG_GUIDE.md
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig  RustCore.xcconfig  customerADebug.xcconfig  customerAProfile.xcconfig  customerARelease.xcconfig  customerBDebug.xcconfig  customerBProfile.xcconfig  customerBRelease.xcconfig  customerCDebug.xcconfig  customerCProfile.xcconfig  customerCRelease.xcconfig
ios/Runner/: AppDelegate.swift  Runner-Bridging-Header.h  SceneDelegate.swift  WalletMethodChannel.swift  customerALaunchScreen.storyboard  customerBLaunchScreen.storyboard  customerCLaunchScreen.storyboard
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  flavors.dart  main.dart
rust_core/: Cargo.toml  build_ios.sh
rust_core/src/: crypto_utils.rs  error.rs  ffi.rs  key_derivation.rs  lib.rs  memory.rs  mnemonic.rs  signing.rs
rust_core/tests/: wallet_tests.rs
rust_core/words/: english.txt
scripts/: build.sh  post_flavorizr.sh
test/: widget_test.dart
(+226 files in other folders)
